// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BaseDataAdapter > resolveTypes > arrays 1`] = `
{
  "genre": {
    "name": "genre",
    "nested": false,
    "propertyPath": [
      "genre",
    ],
    "type": "array",
  },
}
`;

exports[`BaseDataAdapter > resolveTypes > complex objects with null 1`] = `
{
  "id": {
    "name": "id",
    "nested": false,
    "propertyPath": [
      "id",
    ],
    "type": "integer",
  },
  "is_locked": {
    "name": "is_locked",
    "nested": false,
    "propertyPath": [
      "is_locked",
    ],
    "type": "integer",
  },
}
`;

exports[`BaseDataAdapter > resolveTypes > nested objects 1`] = `
{
  "_id": {
    "name": "_id",
    "nested": false,
    "propertyPath": [
      "_id",
    ],
    "type": "string",
  },
  "genre": {
    "name": "genre",
    "nested": false,
    "propertyPath": [
      "genre",
    ],
    "type": "array",
  },
  "location/county/name": {
    "name": "location/county/name",
    "nested": true,
    "propertyPath": [
      "location",
      "county",
      "name",
    ],
    "type": "string",
  },
  "location/zip": {
    "name": "location/zip",
    "nested": true,
    "propertyPath": [
      "location",
      "zip",
    ],
    "type": "integer",
  },
  "name": {
    "name": "name",
    "nested": false,
    "propertyPath": [
      "name",
    ],
    "type": "string",
  },
}
`;

exports[`BaseDataAdapter > resolveTypes > primitive types only 1`] = `
{
  "_id": {
    "name": "_id",
    "nested": false,
    "propertyPath": [
      "_id",
    ],
    "type": "string",
  },
  "name": {
    "name": "name",
    "nested": false,
    "propertyPath": [
      "name",
    ],
    "type": "string",
  },
  "zipcode": {
    "name": "zipcode",
    "nested": false,
    "propertyPath": [
      "zipcode",
    ],
    "type": "integer",
  },
}
`;
